# Game2D

./: .gitignore  LICENSE  README.markdown  atryka.cabal  game2d.cabal
meristem/bugs/: collision cushion  failing movement test  simultaneous collisions  stationary objects gain momentum  sticky player
meristem/improvements/: audio  c-of-p actions  death  don't lose player  drag  elasticity  enemies  friction curve  friction-based walking  game object type safety  generate member transformers  generate num tests  move button holding  moving platforms  no midair jumping  replace accel with force
scripts/: build.sh  docgen.sh  issues.sh  linecheck.sh  pre-commit.sh  setup.sh  test.sh
src/: Config.hs  Main.hs  Math.hs  Test.hs  Types.hs
src/Data/: Nonfinite.hs  Pair.hs
src/Game/: Collision.hs  Input.hs  Logic.hs  Move.hs  Movement.hs  Object.hs  ObjectGroup.hs  Physics.hs  Render.hs  State.hs  Types.hs  Update.hs  Vector.hs
src/Game/State/: Init.hs
src/Game/Update/: Collisions.hs  Input.hs  Physics.hs
src/Main/: Graphics.hs
src/Physics/: Friction.hs  Types.hs
src/Test/: Math.hs
src/Util/: Bool.hs  Fraction.hs  Graph.hs  ID.hs  IO.hs  Impure.hs  Map.hs  Member.hs  Monad.hs  Pair.hs  Prelewd.hs  Queue.hs  Range.hs  Relative.hs  Set.hs  Types.hs  Unit.hs
src/Wrappers/: Events.hs  GLFW.hs  Map.hs  OpenGL.hs  SDL.hs  STM.hs
test/: Fraction.hs  Friction.hs  Indeterminate.hs  InfNum.hs  Instances.hs  Math.hs  Movement.hs  Physics.hs  Queue.hs  Range.hs  Test.hs  Vector.hs
