Name:                Game2D
Version:             0.1
Description:         2D fantasy sidescroller game
Category:            Games
License-file:        LICENSE
Author:              Ben Foppa
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

executable Game2D
    hs-source-dirs:    src/
    main-is:           Main.hs
    ghc-options:       -Wall -Werror -threaded -rtsopts=all
    build-depends:
                    tuple,
                    containers,
                    transformers,
                    Summit == 0.15,
                    Game-Wrappers >= 0.2,
                    Game-Wrappers < 1.0,
                    base >= 4.6,
                    base < 5.0

test-suite Tests
    type:           exitcode-stdio-1.0
    hs-source-dirs: src/
    main-is:        Test.hs
    ghc-options:    -Wall -Werror
    build-depends: 
                    containers,
                    tuple,
                    stm,
                    Cabal,
                    Game-Wrappers,
                    Summit,
                    base
