Name:                Game2D
Version:             0.1
Description:         2D fantasy sidescroller game
Category:            Games
License:             MIT
Author:              Ben Foppa
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

executable Game2D
    hs-source-dirs:    src/
    main-is:           Main.hs
    ghc-options:       -Wall -Werror -threaded -rtsopts=all -ddump-minimal-imports
    build-depends:
                    tuple,
                    transformers,
                    basic-prelude,
                    conduit,
                    game-wrappers >= 0.2,
                    game-wrappers < 1.0,
                    hashable,
                    lens,
                    QuickCheck,
                    test-framework,
                    test-framework-quickcheck2,
                    test-framework-th,
                    unordered-containers,
                    base >= 4.6,
                    base < 5.0

test-suite Tests
    type:           exitcode-stdio-1.0
    hs-source-dirs: src/
    main-is:        Test.hs
    ghc-options:    -Wall -Werror
    build-depends: 
                    containers,
                    tuple,
                    stm,
                    Cabal,
                    game-wrappers,
                    basic-prelude,
                    base
